--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Buka",
-  "productName": "Buka",
+  "name": "C4T-Ed",
+  "productName": "C4T-Ed",
   "version": "1.0.0",
-  "description": "EBook Management and Reader",
+  "description": "C4T-Ed Reader",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -13,11 +13,11 @@
     "package-mac-x64": "electron-packager . --overwrite --platform=mas --arch=x64  --icon=assets/img/icons/icon256x256.icns --prune=true --out=release-builds --electron-version=1.6.6",
     "package-win-x86": "electron-packager . --overwrite --platform=win32 --arch=x86  --icon=assets/img/icon.png --prune=true --out=release-builds --electron-version=1.6.6",
     "package-win-x64": "electron-packager . --overwrite --platform=win32 --arch=x64  --icon=assets/img/icon.png --prune=true --out=release-builds --electron-version=1.6.6",
-    "installer-x86": "electron-installer-debian --src release-builds/Buka-linux-ia32/ --arch i386 --dest dest/installers/ --icon assets/img/icon.png",
-    "installer-x64": "electron-installer-debian --src release-builds/Buka-linux-x64/ --arch amd64 --dest dest/installers/ --icon assets/img/icon.png",
-    "installer-win-x86": "electron-installer-windows --src release-builds/Buka-win32-ia32/ --arch i386 --dest dest/installers/ --icon assets/img/icon.png",
-    "installer-win-x64": "electron-installer-windows --src release-builds/Buka-win32-x64/ --arch amd64 --dest dest/installers/ --icon assets/img/icon.png",
-    "installer-mac-x64": "mkdir dest && mkdir dest/installers && electron-installer-dmg release-builds/Buka-mas-x64/Buka.app Buka --out=dest/installers/",
+    "installer-x86": "electron-installer-debian --src release-builds/C4T-Ed-linux-ia32/ --arch i386 --dest dest/installers/ --icon assets/img/icon.png",
+    "installer-x64": "electron-installer-debian --src release-builds/C4T-Ed-linux-x64/ --arch amd64 --dest dest/installers/ --icon assets/img/icon.png",
+    "installer-win-x86": "electron-installer-windows --src release-builds/C4T-Ed-win32-ia32/ --arch i386 --dest dest/installers/ --icon assets/img/icon.png",
+    "installer-win-x64": "electron-installer-windows --src release-builds/C4T-Ed-win32-x64/ --arch amd64 --dest dest/installers/ --icon assets/img/icon.png",
+    "installer-mac-x64": "mkdir dest && mkdir dest/installers && electron-installer-dmg release-builds/C4T-Ed-mas-x64/C4T-Ed.app C4T-Ed --out=dest/installers/",
     "release-x86": "npm run package-x86 && npm run installer-x86",
     "release-x64": "npm run package-x64 && npm run installer-x64",
     "release-win-x86": "npm run package-win-x86 && npm run installer-win-x86",
@@ -37,18 +37,18 @@
   "author": "Oguzhan Inan <oguzhan3488@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/oguzhaninan/Buka.git"
+    "url": "https://github.com/oguzhaninan/C4T-Ed.git"
   },
   "bugs": {
     "email": "oguzhan3488@gmail.com",
-    "url": "https://github.com/oguzhaninan/Buka/issues"
+    "url": "https://github.com/oguzhaninan/C4T-Ed/issues"
   },
   "build": {
     "linux": {
       "icon": "assets/img/icons"
     }
   },
-  "homepage": "https://github.com/oguzhaninan/Buka",
+  "homepage": "https://github.com/oguzhaninan/C4T-Ed",
   "dependencies": {
     "alertify.js": "^1.0.12",
     "nedb": "^1.8.0",
