--- a/package.json
+++ b/package.json
@@ -34,21 +34,21 @@
     "ebook reader",
     "pdf reader"
   ],
-  "author": "Oguzhan Inan <oguzhan3488@gmail.com>",
+  "author": "Emmanuel Evance <mtuchidev@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/oguzhaninan/C4T-Ed.git"
+    "url": "https://github.com/mtuchi/C4T-Ed.git"
   },
   "bugs": {
-    "email": "oguzhan3488@gmail.com",
-    "url": "https://github.com/oguzhaninan/C4T-Ed/issues"
+    "email": "mtuchidev@gmail.com",
+    "url": "https://github.com/mtuchi/C4T-Ed/issues"
   },
   "build": {
     "linux": {
       "icon": "assets/img/icons"
     }
   },
-  "homepage": "https://github.com/oguzhaninan/C4T-Ed",
+  "homepage": "https://github.com/mtuchi/C4T-Ed",
   "dependencies": {
     "alertify.js": "^1.0.12",
     "is-online": "^7.0.0",
