--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "alertify.js": "^1.0.12",
     "is-online": "^7.0.0",
     "is-reachable": "^2.3.3",
+    "jsftp": "^2.1.3",
     "nedb": "^1.8.0",
     "node-google-translate-skidz": "^1.1.1",
     "request": "^2.81.0",
