--- a/package.json
+++ b/package.json
@@ -51,8 +51,9 @@
   "homepage": "https://github.com/mtuchi/C4T-Ed",
   "dependencies": {
     "alertify.js": "^1.0.12",
+    "electron-installer-debian": "^0.8.0",
+    "electron-packager": "^10.1.2",
     "is-online": "^7.0.0",
-    "is-reachable": "^2.3.3",
     "jsftp": "^2.1.3",
     "nedb": "^1.8.0",
     "node-google-translate-skidz": "^1.1.1",
