--- a/package.json
+++ b/package.json
@@ -51,12 +51,17 @@
   "homepage": "https://github.com/mtuchi/C4T-Ed",
   "dependencies": {
     "alertify.js": "^1.0.12",
+    "async": "^2.6.0",
+    "dat-node": "^3.5.7",
     "electron-installer-debian": "^0.8.0",
     "electron-packager": "^10.1.2",
+    "ftp": "^0.3.10",
+    "ftpsync": "^0.2.0",
     "is-online": "^7.0.0",
     "jsftp": "^2.1.3",
     "nedb": "^1.8.0",
     "node-google-translate-skidz": "^1.1.1",
+    "parse-listing": "^1.1.3",
     "request": "^2.81.0",
     "vuex": "^2.3.1",
     "web-pingjs": "^1.0.0"
