--- a/c4t/package.json
+++ b/c4t/package.json
@@ -23,11 +23,13 @@
     "postinstall": "npm run lint:fix"
   },
   "dependencies": {
+    "alertify.js": "^1.0.12",
     "axios": "^0.16.1",
     "electron": "^1.7.5",
     "is-online": "^7.0.0",
     "nedb": "^1.8.0",
     "node-google-translate-skidz": "^1.1.1",
+    "pdfjs-dist": "^2.0.391",
     "request": "^2.83.0",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
